force-app/main/default/objects/VerificationResult__c/VerificationResult__c.object-meta.xml
<CustomObject>
    <label>VerificationResult</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>VerificationResult</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VerificationResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>