force-app/main/default/objects/VerificationResult__c/fields/ExternalSubmissionId__c.field-meta.xml
<CustomField>
    <fullName>ExternalSubmissionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExternalSubmissionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>