force-app/main/default/objects/VerificationResult__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rationale</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>