force-app/main/default/objects/VerificationResult__c/fields/ResultPayload__c.field-meta.xml
<CustomField>
    <fullName>ResultPayload__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ResultPayload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>