force-app/main/default/objects/VerificationResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExternalSubmissionId__c</columns>
    <columns>Provider__c</columns>
    <columns>Status__c</columns>
    <columns>Rationale__c</columns>
    <columns>ResultPayload__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>